loopfor.LoopFor.scala.error
Compilation error:
LoopFor:1: error: not found: value stepamount
stepamount=0
^LoopFor:4: error: not found: value stepamount
  stepamount=stepamount+1
  ^LoopFor:6: error: not found: value stepamount
for (stepper<-1 to stepamount ){
                   ^